--- a/frontend/core/src/main/webapp/static/app/entry/entryMain.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryMain.html
@@ -6,8 +6,8 @@
     </header>
     <h1>sign up</h1>
     <form role="form" name="signupForm">
-      <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
-      <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password..." required />
+      <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email&#8230;" required />
+      <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password&#8230;" required />
       <div class="group-mixed">
         <div class="group-mixed--left">
           <input type="checkbox" ng-model="user.agree" ng-true-value="true" icon-checkbox="signupFormAgree" />
@@ -41,8 +41,8 @@
       <a href ng-click="swipeToForgot()" class="link-navigation-forward group-symmetrical--right">forgot?</a>
     </header>
     <h1>log in</h1>
-    <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
-    <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password..." required />
+    <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email&#8230;" required />
+    <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password&#8230;" required />
     <div class="group-mixed">
       <div class="group-mixed--left">
         <input type="checkbox" ng-model="user.remember" ng-true-value="true" icon-checkbox="loginFormRemember" />
