--- a/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
@@ -6,7 +6,7 @@ editable-field-container-clicked-elsewhere="clickedElsewhere()">
   </div>
   <div class="group-mixed--middle">
     <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
-    editable-field placeholder="add list..." maxlength="128"
+    editable-field placeholder="add list&#8230;" maxlength="128"
     auto-focus="registerAddItemCallbacks(focus, blur)">
     </textarea>
   </div>
