--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -8,7 +8,7 @@
       editable-field-container-clicked-elsewhere="clickedElsewhere()">
         <div class="group-mixed--middle">
           <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
-          editable-field placeholder="add item..." maxlength="128"
+          editable-field placeholder="add item&#8230;" maxlength="128"
           focusable="registerAddItemCallbacks(focus, blur)">
           </textarea>
         </div>
