--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -24,11 +24,11 @@
         <div class="container-content" drawer-override-aisle="right">
           <div lists-select-options>
             <select ng-if="!addNewListVisible" class="select-list-visible-animation row" ng-model="note.transientProperties.list" ng-options="list.uuid as list.title for list in listsSelectOptions" options-disabled="list.delimiter for list in listsSelectOptions">
-              <option value="">select list...</option>
+              <option value="">select list&#8230;</option>
             </select>
             <div ng-if="addNewListVisible" class="group-mixed select-list-visible-animation">
               <div class="group-mixed--middle">
-                <input type="text" ng-model="newList.title" placeholder="add list..."/>
+                <input type="text" ng-model="newList.title" placeholder="add list&#8230;"/>
               </div>
               <div class="group-mixed--right">
                 <a href class="group-mixed--right font-smallest add-new-list-item-cancel" ng-click="setAddNewListHidden()">cancel</a>
