--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -8,7 +8,7 @@ editable-field-container-clicked-elsewhere="clickedElsewhere()">
   </div>
   <div class="group-mixed--middle">
     <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
-    editable-field placeholder="add task..." maxlength="128"
+    editable-field placeholder="add task&#8230;" maxlength="128"
     focusable="registerAddItemCallbacks(focus, blur)">
     </textarea>
   </div>
