Show tasks completed on slide's date in focus tasks past date slides.  * added paramFilter to be able to pass custom filter with parameters  * added pastDate property to daySlide  * disable show completed button in past date slides

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -50,6 +50,7 @@
   <script src="static/common/loadingAnimationDirective.js"></script>
   <script src="static/common/listsSelectOptionsDirective.js"></script>
   <script src="static/common/optionsDisabledDirective.js"></script>
+  <script src="static/common/paramFilter.js"></script>
   <script src="static/common/passwordMatchDirective.js"></script>
   <script src="static/common/pikaday.js"></script>
   <script src="static/common/snap.js"></script>
