--- a/frontend/core/src/main/webapp/static/app/tasks/taskListCompleted.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListCompleted.html
@@ -1,4 +1,4 @@
-<button class="btn animate-btn-completed" ng-if="containsCompleted()"
+<button class="btn animate-btn-completed" ng-if="!isCompletedDisabled() && containsCompleted()"
 ng-click="toggleShowCompletedTasks()">
   <span class="text-toggle-completed"></span>
 </button>
