Adjusted navigation layout

--- a/frontend/core/src/main/webapp/static/app/base/listFooter.html
+++ b/frontend/core/src/main/webapp/static/app/base/listFooter.html
@@ -4,7 +4,7 @@
   </a>
 
   <a href class="group-symmetrical--middle" ng-click="addItem()">
-    <span>+</span>
+    <span class="text-plus"></span>
   </a>
 
   <a href ng-if="rightNavigationText" class="group-symmetrical--right" ng-click="navigationAction(rightNavigationActionParameter)">
