--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -1,12 +1,9 @@
-<div class="container-toolbar--inner" ng-controller="ToolbarController">
-  <nav class="group-symmetrical swiper-no-swiping" role="navigation">
-    <button ng-if="!isDatepickerVisible" class="group-symmetrical--left btn" type="button" ng-click="toggleMenu()" alt="menu">
-      <span class="text-menu"></span>
-    </button>
-    <a href ng-if="isDatepickerVisible" class="group-symmetrical--left" id="todayLink" ng-class="{'link-highlighted': !isTodayActive}">today</a>
-    <a href class="group-symmetrical--middle" ng-click="switchFeature()" ng-bind="getCurrentHeading()"></a>
-    <button class="group-symmetrical--right btn" ng-click="openEditor('omnibar')">
-      <span class="text-logo"></span>
-    </button>
-  </nav>
+<div class="container-toolbar--inner swiper-no-swiping group-symmetrical" ng-controller="ToolbarController">
+  <button class="group-symmetrical--left btn" type="button" ng-click="toggleMenu()" alt="menu">
+    <span class="text-menu"></span>
+  </button>
+  <a href class="group-symmetrical--middle" ng-click="switchFeature()" ng-bind="getCurrentHeading()"></a>
+  <button class="group-symmetrical--right btn" ng-click="openEditor('omnibar')">
+    <span class="text-logo"></span>
+  </button>
 </div>
