Applied new heading style to h2 elements. Added .group-heading class to style h2 elements when there is now .group-mixed.

--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -1,6 +1,6 @@
 <div ng-if="isFeatureActive('focus')" class="container-content--outer" list-container>
   <section class="container-content" list>
-    <h2>favorite</h2>
+    <h2 class="group-heading row">favorite</h2>
     <div class="row" ng-repeat="note in notes" list-item="note" list-item-has-checkbox="false"></div>
     <div list-item-add></div>
   </section>
