--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -1,6 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container drawer-handle="left">
   <section class="container-content" list="tasks" list-order="top" swiper-prevent>
-    <div class="group-mixed">
+    <div class="group-mixed heading">
       <div class="group-mixed--middle">
         <h2>recent</h2>
       </div>
