--- a/frontend/core/src/main/webapp/static/app/user/userHome.html
+++ b/frontend/core/src/main/webapp/static/app/user/userHome.html
@@ -1,6 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('user')" drawer-handle="left">
   <section class="container-content" scroll-to>
-    <h2>online</h2>
+    <h2 class="group-heading row">online</h2>
 
     <div ng-if="useCollectives()">
       <h3>collectives</h3>
