--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -57,7 +57,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/rightDuplicate" slide-index="0" swiper-slide-duplicate="true">
           <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'" list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate">
-            <div ng-hide="datepickerVisible" class="group-mixed">
+            <div ng-hide="datepickerVisible" class="group-mixed heading">
               <div class="group-mixed--middle">
                 <h2 ng-bind="daySlides[2].heading" ng-click="toggleDatepicker()"></h2>
               </div>
@@ -78,7 +78,7 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1" swiper-slide-loop-start="true">
           <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'" list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate">
 
-            <div ng-hide="datepickerVisible" class="group-mixed">
+            <div ng-hide="datepickerVisible" class="group-mixed heading">
               <div class="group-mixed--middle">
                 <h2 ng-bind="daySlides[0].heading" ng-click="toggleDatepicker()"></h2>
               </div>
@@ -99,7 +99,7 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
           <div class="container-content" ng-class="daySlides[1].pastDate && 'past-date'" list="tasks | tasksByDate:daySlides[1].info:daySlides[1].pastDate">
 
-            <div ng-hide="datepickerVisible" class="group-mixed">
+            <div ng-hide="datepickerVisible" class="group-mixed heading">
               <div class="group-mixed--middle">
                 <h2 ng-bind="daySlides[1].heading" ng-click="toggleDatepicker()"></h2>
               </div>
@@ -119,7 +119,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
           <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'" list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate">
-            <div ng-hide="datepickerVisible" class="group-mixed">
+            <div ng-hide="datepickerVisible" class="group-mixed heading">
               <div class="group-mixed--middle">
                 <h2 ng-bind="daySlides[2].heading" ng-click="toggleDatepicker()"></h2>
               </div>
@@ -138,7 +138,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/leftDuplicate" slide-index="4" swiper-slide-duplicate="true">
           <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'" list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate">
-            <div ng-hide="datepickerVisible" class="group-mixed">
+            <div ng-hide="datepickerVisible" class="group-mixed heading">
               <div class="group-mixed--middle">
                 <h2 ng-bind="daySlides[0].heading" ng-click="toggleDatepicker()"></h2>
               </div>
