--- a/frontend/core/src/main/webapp/static/app/entry/entryForgot.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryForgot.html
@@ -1,8 +1,8 @@
 <form name="forgotForm">
   <section class="container-content">
     <header class="group-symmetrical">
-      <a href class="group-symmetrical--left" ng-click="swipeToMain()">
-        <span class="link-navigation-back">back</span>
+      <a href class="group-symmetrical--left link-navigation" ng-click="swipeToMain()">
+        <span class="text-navigation-back downplayed">back</span>
       </a>
     </header>
     <h1>forgot password?</h1>
