--- a/frontend/core/src/main/webapp/static/app/entry/entryMain.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryMain.html
@@ -2,8 +2,8 @@
 <form ng-if="entryState === 'signup'" name="signupForm">
   <section class="container-content">
     <header class="group-symmetrical">
-      <a href ng-click="swipeToHome()" class="group-symmetrical--left">
-        <span class="link-navigation-back">back</span>
+      <a href ng-click="swipeToHome()" class="group-symmetrical--left link-navigation">
+        <span class="text-navigation-back">back</span>
       </a>
     </header>
     <h1>sign up</h1>
@@ -39,11 +39,11 @@
 <form ng-if="entryState === 'login'" name="loginForm">
   <section class="container-content">
     <header class="group-symmetrical" >
-      <a href ng-click="swipeToHome()" class="group-symmetrical--left">
-        <span class="link-navigation-back">back</span>
+      <a href ng-click="swipeToHome()" class="group-symmetrical--left link-navigation">
+        <span class="text-navigation-back">back</span>
       </a>
-      <a href ng-click="swipeToForgot()" class="group-symmetrical--right">
-        <span class="link-navigation-forward">forgot?</span>
+      <a href ng-click="swipeToForgot()" class="group-symmetrical--right link-navigation">
+        <span class="text-navigation-forward">forgot?</span>
       </a>
     </header>
     <h1>log in</h1>
