--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -2,8 +2,8 @@
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical row">
-        <a href class="group-symmetrical--left" ng-click="closeEditor()">
-          <span class="link-navigation-back">back</span>
+        <a href class="group-symmetrical--left link-navigation" ng-click="closeEditor()">
+          <span class="text-navigation-back">back</span>
         </a>
       </div>
 
