--- a/frontend/core/src/main/webapp/static/app/user/userDetails.html
+++ b/frontend/core/src/main/webapp/static/app/user/userDetails.html
@@ -20,8 +20,8 @@
 
   <footer class="container-content--after">
     <nav role="navigation" class="swiper-no-swiping group-symmetrical">
-      <a href ng-click="swipeToHome()" class="group-symmetrical--left">
-        <span class="link-navigation-back">home</span>
+      <a href ng-click="swipeToHome()" class="group-symmetrical--left link-navigation">
+        <span class="text-navigation-back">home</span>
       </a>
     </nav>
   </footer>
