Focus link visible and separated

--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -4,8 +4,8 @@
       <span class="text-navigation-menu-small" ng-bind="getActiveDisplayName()"></span>
     </a>
 
-    <a href class="row separate" ng-click="gotoFeature('focus')" ng-class="isFeatureActive('focus') && 'highlighted'">
-      <span >focus</span>
+    <a href class="link-menu separate row" ng-click="gotoFeature('focus')" ng-class="isFeatureActive('focus') && 'highlighted'">
+      <span class="text-navigation-menu">focus</span>
     </a>
     <a href class="link-menu row" ng-click="gotoFeature('inbox')" ng-class="isFeatureActive('inbox') && 'highlighted'">
       <span class="text-navigation-menu">inbox</span>
